# commit-cat

./: .gitignore  LICENSE  MVP Roadmap.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity.rs  cat.rs  fullscreen.rs  git.rs  growth.rs  mod.rs  pomodoro.rs  settings.rs
src-tauri/src/events/: mod.rs
src-tauri/src/models/: activity.rs  cat.rs  growth.rs  mod.rs  settings.rs
src-tauri/src/services/: activity.rs  git.rs  mod.rs  state_machine.rs  storage.rs
src-tauri/src/utils/: mod.rs
src/components/cat/: Cat.css  Cat.tsx
src/components/pomodoro/: Pomodoro.tsx
src/components/settings/: Settings.tsx
src/components/summary/: Summary.tsx
src/components/tray/: TrayPanel.tsx
src/hooks/: useTauriEvent.ts
src/stores/: catStore.ts
src/styles/: global.css
src/utils/: format.ts
